; ModuleID = '/home/carl/AnghaBench/macvim/src/extr_edit.c_undisplay_dollar.c'
source_filename = "/home/carl/AnghaBench/macvim/src/extr_edit.c_undisplay_dollar.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }

@dollar_vcol = common dso_local global i32 0, align 4
@curwin = common dso_local global %struct.TYPE_4__* null, align 8
@FALSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @undisplay_dollar to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @undisplay_dollar() #0 {
  %1 = load i32, i32* @dollar_vcol, align 4
  %2 = icmp sge i32 %1, 0
  br i1 %2, label %3, label %10

3:                                                ; preds = %0
  store i32 -1, i32* @dollar_vcol, align 4
  %4 = load %struct.TYPE_4__*, %struct.TYPE_4__** @curwin, align 8
  %5 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 0
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = load i32, i32* @FALSE, align 4
  %9 = call i32 @redrawWinline(i32 %7, i32 %8)
  br label %10

10:                                               ; preds = %3, %0
  ret void
}

declare dso_local i32 @redrawWinline(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
